# protoc-gen-prost

./: .Dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  bors.toml  docker.sh  publish_buf.sh  renovate.json  tea.yaml
.github/: CODEOWNERS
.github/workflows/: rust.yml
example/build-with-buf/: .build.rs  Cargo.toml  buf.gen.yaml
example/build-with-buf/proto/example/: ExampleRequest.proto  ExampleResponse.proto  ExampleService.proto
example/build-with-buf/src/: lib.rs
example/wkt-reflection-with-buf/: Cargo.toml  README.md  buf.gen.yaml
example/wkt-reflection-with-buf/proto/example/: ExampleRequest.proto  ExampleService.proto
example/wkt-reflection-with-buf/src/: lib.rs
proto/: Cargo.toml.tpl  buf.gen.yaml
proto/greeter/v1/: greeter.proto
proto/helloworld/abstract/v1/: wow.proto
proto/helloworld/self/v1alpha1/: EmptyMessage.proto
proto/helloworld/submodule/v1/: wow.proto
proto/helloworld/v1/: helloworld.proto
protoc-gen-prost/: Cargo.toml  README.md
protoc-gen-prost-crate/: Cargo.toml  README.md
protoc-gen-prost-crate/src/: generator.rs  lib.rs  main.rs
protoc-gen-prost-crate/src/generator/: cargo_crate.rs  features.rs  include_file.rs
protoc-gen-prost-serde/: Cargo.toml  README.md
protoc-gen-prost-serde/src/: generator.rs  lib.rs  main.rs
protoc-gen-prost-utoipa/: Cargo.toml  README.md
protoc-gen-prost-utoipa/src/: generator.rs  lib.rs  main.rs
protoc-gen-prost-validate/: Cargo.toml  buf.gen.yaml  buf.work.yaml
protoc-gen-prost-validate/src/: generator.rs  lib.rs  main.rs
protoc-gen-prost-validate/tests/: harness.rs
protoc-gen-prost-validate/tests/cases/: cases.rs  mod.rs
protoc-gen-prost-validate/tests/proto/: buf.yaml
protoc-gen-prost-validate/tests/proto/cases/: bool.proto  bytes.proto  enums.proto  filename-with-dash.proto  kitchen_sink.proto  maps.proto  messages.proto  nested.proto  numbers.proto  oneofs.proto  repeated.proto  strings.proto  wkt_any.proto  wkt_duration.proto  wkt_nested.proto  wkt_timestamp.proto  wkt_wrappers.proto
protoc-gen-prost-validate/tests/proto/other_package/: embed.proto
protoc-gen-prost-validate/tests/proto/sort/: sort.proto
protoc-gen-prost-validate/tests/proto/subdirectory/: in_subdirectory.proto
protoc-gen-prost-validate/tests/proto/yet_another_package/: embed.proto
protoc-gen-prost/src/: lib.rs  main.rs
protoc-gen-prost/src/generator/: core.rs  file_descriptor_set.rs
protoc-gen-tonic/: Cargo.toml  README.md
protoc-gen-tonic/src/: generator.rs  lib.rs  main.rs  resolver.rs
protoc-wkt/: Cargo.toml  README.md  buf.gen.yaml
protoc-wkt/src/: lib.rs
src/: generator.rs  generators.rs  lib.rs  main.rs  util.rs
src/generator/: core.rs  file_descriptor_set.rs  include_file.rs
src/generators/: core.rs  file_descriptor_set.rs  include_file.rs
supply-chain/: audits.toml  config.toml
