[workspace]
members = [
    "protoc-gen-prost",
    "protoc-gen-prost-crate",
    "protoc-gen-prost-serde",
    "protoc-gen-prost-validate",
    "protoc-gen-tonic",
]

[patch.crates-io]
pbjson-build = { git = "https://github.com/influxdata/pbjson", branch = "main" }
tonic-build = { git = "https://github.com/neoeinstein/tonic", branch = "prost-0.10.0" }
