[workspace]
resolver = "2"
members = [
    "protoc-gen-prost",
    "protoc-gen-prost-crate",
    "protoc-gen-prost-serde",
    "protoc-gen-prost-validate",
    "protoc-gen-tonic",
    "protoc-wkt",
]

[workspace.dependencies]
once_cell = "1.10.0"
pbjson-build = "0.7.0"
prost = { version = "0.13.4", default-features = false, features = ["std"] }
prost-build = { version = "0.13.4", default-features = false }
prost-types = { version = "0.13.4", default-features = false }
regex = { version = "1.5.5", default-features = false }
tonic-build = "0.13.0"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true

[patch.crates-io]
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master", revision = "5e9a5bc" } # tonic-build v0.13 (not yet released)
