[package]
name = "protoc-gen-prost-crate"
version = "0.5.0"
authors = ["Marcus Griep <marcus@griep.us>", "Sienna Meridian Satterwhite <sienna@r3t.io>"]
description = "Protocol Buffers compiler plugin powered by Prost!"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
prost-build.workspace = true
prost-types.workspace = true
prost.workspace = true
protoc-gen-prost = { version = "0.5.0", path = "../protoc-gen-prost" }
regex.workspace = true
