[package]
name = "protoc-gen-prost-serde"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin providing JSON serializations"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost-serde"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "serde", "json"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
pbjson-build = "0.2.3"
prost-build = { version = "0.9.0", default-features = false }
prost-types = { version = "0.9.0", default-features = false }
prost = { version = "0.9.0", default-features = false, features = ["std"] }
protoc-gen-prost = { version = "0.1.0", path = "../protoc-gen-prost" }
regex = { version = "1.5.5", default-features = false }

[patch.crates-io]
pbjson-build = { git = "https://github.com/neoeinstein/pbjson", branch = "protoc-plugin-compat" }
prost-build = { git = "https://github.com/tokio-rs/prost", branch = "master" }
prost-types = { git = "https://github.com/tokio-rs/prost", branch = "master" }
prost = { git = "https://github.com/tokio-rs/prost", branch = "master" }

[workspace]
