[package]
name = "protoc-gen-prost-serde"
version = "0.2.3"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin providing JSON serializations"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost-serde"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "serde", "json"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson-build = "0.6.2"
prost-build = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.3", default-features = false }
prost = { version = "0.12.3", default-features = false, features = ["std"] }
protoc-gen-prost = { version = "0.2.0", path = "../protoc-gen-prost" }
regex = { version = "1.5.5", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
