[package]
name = "protoc-gen-prost-serde"
version = "0.3.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin providing JSON serializations"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost-serde"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "serde", "json"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson-build.workspace = true
prost-build.workspace = true
prost-types.workspace = true
prost.workspace = true
protoc-gen-prost = { version = "0.3.1", path = "../protoc-gen-prost" }
regex.workspace = true
