[package]
name = "protoc-gen-prost-validate"
version = "0.0.1"
authors = ["Marcus Griep <marcus@griep.us>", "Adphi <philippe.adrien.nousse@gmail.com>"]
description = "Coming soon…"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "harness"
path = "tests/harness.rs"

[dependencies]
prost-build.workspace = true
prost-types.workspace = true
prost.workspace = true
protoc-gen-prost = { version = "0.4.0", path = "../protoc-gen-prost" }
prost-validate-build = { version = "0.2.9" }
prost-validate-derive-core = { version = "0.2.9" }
prost-validate-types = { version = "0.2.9" }
syn = "2.0.75"
proc-macro2 = "1.0.86"
prost-reflect = "0.16.2"
quote = "1"
prettyplease = "0.2.9"

[dev-dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
prost-validate = { version = "0.2.9" }
time = "0.3.36"
regex = "1"
once_cell = "1.20.2"
