[package]
name = "protoc-gen-prost"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin powered by Prost!"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost"]
categories = ["encoding"]
exclude = [
    "proto"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
prost-build = { version = "0.10.0", default-features = false }
prost-types = { version = "0.10.0", default-features = false }
prost = { version = "0.10.0", default-features = false, features = ["std"] }
regex = { version = "1.5.5", default-features = false }
