[package]
name = "protoc-gen-prost"
version = "0.3.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin powered by Prost!"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.62"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost"]
categories = ["encoding"]
exclude = ["proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
prost-build = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.3", default-features = false }
prost = { version = "0.12.3", default-features = false, features = ["std"] }
regex = { version = "1.5.5", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
