[package]
name = "protoc-gen-prost"
version = "0.3.1"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin powered by Prost!"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-prost"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.62"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost"]
categories = ["encoding"]
exclude = ["proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
prost-build.workspace = true
prost-types.workspace = true
prost.workspace = true
regex.workspace = true
