[package]
name = "protoc-gen-tonic"
version = "0.2.1"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin for gRPC services powered by Prost! and Tonic"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-tonic"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "grpc", "tonic"]
categories = ["encoding"]
exclude = ["proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
prettyplease = "0.1.9"
prost-build = { version = "0.11.6", default-features = false }
prost-types = { version = "0.11.6", default-features = false }
prost = { version = "0.11.0", default-features = false, features = ["std"] }
protoc-gen-prost = { version = "0.2.0", path = "../protoc-gen-prost" }
regex = { version = "1.5.5", default-features = false }
syn = { version = "1.0.89", features = ["parsing", "full"] }
tonic-build = "0.8.4"

[profile.release]
codegen-units = 1
lto = "fat"
debug = true