[package]
name = "protoc-gen-tonic"
version = "0.4.1"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Protocol Buffers compiler plugin for gRPC services powered by Prost! and Tonic"
repository = "https://github.com/neoeinstein/protoc-gen-prost"
homepage = "https://github.com/neoeinstein/protoc-gen-prost"
documentation = "https://docs.rs/protoc-gen-tonic"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "grpc", "tonic"]
categories = ["encoding"]
exclude = ["proto"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.5.0"
prettyplease = "0.2.9"
proc-macro2 = "1.0"
prost-build.workspace = true
prost-types.workspace = true
prost.workspace = true
protoc-gen-prost = { version = "0.4.0", path = "../protoc-gen-prost" }
quote = "1.0"
regex.workspace = true
syn = { version = "2.0.22", features = ["parsing", "full"] }
tonic-build.workspace = true
